--- a/estilo.css
+++ b/estilo.css
@@ -25,4 +25,10 @@ body{
     font-weight: bolder;
 
         }
-221, 229, 230
+ </div>
+.div_contato{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font: size 12px; color:rgb(116, 29, 29) ;
+    font-weight: bolder;
+}
