--- a/estilo.css
+++ b/estilo.css
@@ -26,9 +26,11 @@ body{
 
         }
  </div>
+
 .div_contato{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font: size 12px; color:rgb(116, 29, 29) ;
     font-weight: bolder;
+}
 }
